--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
-    <string name="app_name">PopularMovies</string>
+    <string name="app_name">MovieBase</string>
     <string name="common_error">Error</string>
     <string name="common_no_connection">check your internet connection</string>
     <string name="common_Ok">Ok</string>
     <string name="commont_unknown_error">unknown error</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
